added about and contact page

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "carrental",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://joelbaiju.github.io/carrental",
+  "homepage": "",
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
     "@testing-library/dom": "^10.4.0",
